# RAG_self_learning

./: .gitignore  pyproject.toml  requirements.txt
data/: applications.csv
notebooks/: document.ipynb
